logs/speca.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/speca'...
Compiling './lib/python3.5/site-packages/speca/__init__.py'...
***   File "./lib/python3.5/site-packages/speca/__init__.py", line 33
    print version_info
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/speca/commands'...
Compiling './lib/python3.5/site-packages/speca/commands/parse.py'...
***   File "./lib/python3.5/site-packages/speca/commands/parse.py", line 23
    print 'filename= %s' % cmd_args[0]
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/speca/lang'...
Listing './lib/python3.5/site-packages/speca/lang/erlang'...
Compiling './lib/python3.5/site-packages/speca/lang/erlang/generator.py'...
***   File "./lib/python3.5/site-packages/speca/lang/erlang/generator.py", line 154
    print 'Warning: record %s has no fields, skip it...' % make_erlang_func(r.name)
                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/speca/lang/javascript'...
Compiling './lib/python3.5/site-packages/speca/lang/javascript/generator.py'...
***   File "./lib/python3.5/site-packages/speca/lang/javascript/generator.py", line 14
    print 'Javascript generator [START]'
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/speca/lang/python'...
Compiling './lib/python3.5/site-packages/speca/lang/python/generator.py'...
***   File "./lib/python3.5/site-packages/speca/lang/python/generator.py", line 15
    print 'Python generator [START]'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/speca/parser.py'...
***   File "./lib/python3.5/site-packages/speca/parser.py", line 114
    print '%s<%s |%s|> %s' % (' '*self.indent, self.directive, self.id, self.value)
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/speca-0.2.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
